# category_vector_project

./: .gitignore  1.0.0  DEPLOY.md  README.md  category_generator.py  config.toml  main.py  merge_categories.py  pyproject.toml  初始化数据说明.md
data/: categories.json  sample_categories.json  内网分类.csv
data/vectors_hnsw/: categories.json
data/vectors_new/: milvus_config.json
data_init/: README.md  __init__.py
data_init/examples/: generate_categories.py
data_init/scripts/: category_generator.py  merge_categories.py
notebooks/: execute_build.ipynb
src/categoryvector/: __init__.py  api.py  cli.py  config.py  data_processing.py  main.py  models.py  vector_generation.py  vector_storage.py
src/categoryvector/utils/: __init__.py  logging_utils.py  redis_client.py
tests/: __init__.py  test_data_processing.py  test_vector_generation.py
