[tool.poetry]
name = "categoryvector"
version = "1.0.0"
description = "基于向量搜索的分类API服务"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "categoryvector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.24.0"
pydantic = "^2.0.0"
pymilvus = "^2.2.8"
sentence-transformers = "^2.2.2"
numpy = "^1.24.0"
python-multipart = "^0.0.6"
httpx = "^0.24.0"
loguru = "^0.7.0"
toml = "^0.10.2"
tqdm = "^4.66.0"
python-dotenv = "^1.1.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
categoryvector = "categoryvector.main:main"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.categoryvector]
config_file = "config.toml"
