[tool.poetry]
name = "categoryvector"
version = "0.1.0"
description = "基于向量搜索的分类查询系统"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sentence-transformers = "^2.2.2"
numpy = "^1.24.3"
pymilvus = "^2.3.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
toml = "^0.10.2"
redis = "^5.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI 命令
cv = "categoryvector.cli:main"  # 主命令入口
serve = "categoryvector.main:main"  # API 服务

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.categoryvector]
config_file = "config.toml"
